third_party/move/move-compiler-v2/tests/lambda/inline-parity/cool_inlining_test.lambda.exp

Diagnostics:
error: no function named `beans` found
   ┌─ tests/lambda/inline-parity/cool_inlining_test.move:15:17
   │
15 │         foo(| | beans())
   │                 ^^^^^^^
